# SENTRY

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
app/: app.py
configs/: default.yaml
data/: README.md
data/cards/: README.md  shanghaitech.md  ucf_crime.md  virat.md
data/samples/ucf_crime/: manifest.csv  manifest.json  test.jsonl  train.jsonl  val.jsonl
deploy/: DEPLOY.md
deploy/space/: README.md  app.py  requirements.txt
scripts/: deploy_space.py
src/: config.py
src/data/: dataset.py  manifest.py  preprocess.py
src/data/datasets/: __init__.py  ucf_crime.py
src/eval/: __init__.py  analysis.py  calibration.py  metrics.py  reliability.py
src/grounding/: __init__.py
src/model/: inference.py  model.py  multiview.py  prompts.py  temporal.py  train.py
src/schema/: __init__.py  incident.py
tests/: test_data.py  test_eval.py  test_grounding.py  test_reliability.py  test_schema.py  test_smoke.py  test_temporal.py  test_ucf_crime.py
